modificamos las mq de header

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -281,7 +281,7 @@ footer img {
     justify-content: center;
     font-size: 1.2rem;
   }
-  .logo_tipo {
+  header .logo_tipo {
     margin: 0px;
   }
   .padre {
