--- a/css/estilos.css
+++ b/css/estilos.css
@@ -219,6 +219,15 @@ h3 {
   border-radius: 50%;
 }
 
+.perfilTexto {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.perfilTexto p {
+  margin: 20px 200px;
+}
+
 .galeria {
   display: flex;
   flex-wrap: wrap;
