--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -233,6 +233,14 @@ h3 {
         border-radius: 50%;
     }
 }
+.perfilTexto {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    p {
+        margin: 20px 200px;
+    }
+    }
 
 
 .galeria{
