modificamos margin perfiltexto para movil

--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -345,6 +345,11 @@ footer {
         margin: 30px;
         text-align: justify;
     }
+    .perfilTexto {
+        p {
+            margin: 10px 0px;
+        }
+        }
     .iframe{
         width: 380px;
     }
