--- a/css/estilos.css
+++ b/css/estilos.css
@@ -324,6 +324,9 @@ footer img {
     margin: 30px;
     text-align: justify;
   }
+  .perfilTexto p {
+    margin: 10px 0px;
+  }
   .iframe {
     width: 380px;
   }
