achicamos margin en perfil p para movil

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -325,7 +325,8 @@ footer img {
     text-align: justify;
   }
   .perfilTexto p {
-    margin: 10px 0px;
+    margin: 10px 20px;
+    text-align: justify;
   }
   .iframe {
     width: 380px;
