--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -345,10 +345,9 @@ footer {
         margin: 30px;
         text-align: justify;
     }
-    .perfilTexto {
-        p {
-            margin: 10px 0px;
-        }
+    .perfilTexto p {       
+            margin: 10px 20px;
+            text-align: justify;        
         }
     .iframe{
         width: 380px;
