--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -37,13 +37,16 @@ header {
     background-color: rgba(255, 255, 255, 0.836);
     position: sticky;
     top: 0;
+    .link_logo {
+        margin-left: 10%;
+    }
     img {
         width: 100px;
         padding: 20px 0px 10px 0px;
     }
     .logo_tipo {
         @include tamanio( 100px , auto );
-        margin-left: 10%;
+        // margin-left: 10%;
     }
     nav{
         margin-right: 10%;
