--- a/css/estilos.css
+++ b/css/estilos.css
@@ -150,7 +150,6 @@ h3 {
   grid-area: car2;
   background-size: cover;
   background-position: center;
-  /* padding: 10px; */
   border-radius: 10px;
 }
 .card_2 a {
@@ -269,7 +268,6 @@ footer {
   background-color: #007ACC;
   padding: 20px;
   color: #0D0D0D;
-  /*margin-top: 20px;*/
   text-align: center;
 }
 footer img {
@@ -352,10 +350,7 @@ footer img {
   }
   .form input {
     width: 360px;
-  } /*
-.presentacion{
-    width: 380px;
-}*/
+  }
   section .form {
     width: 360px;
   }
