--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -46,7 +46,7 @@ header {
     }
     .logo_tipo {
         @include tamanio( 100px , auto );
-        // margin-left: 10%;
+        
     }
     nav{
         margin-right: 10%;
@@ -164,7 +164,6 @@ h3 {
     grid-area: car2;
     background-size: cover;
     background-position: center;
-    /* padding: 10px; */
     border-radius: 10px;
     a {
         color: #0D0D0D;
@@ -289,7 +288,6 @@ footer {
     background-color: $azulClaro;
     padding: 20px;
     color: #0D0D0D;
-    /*margin-top: 20px;*/
     text-align: center;
     img {
         width: 30px;
@@ -374,10 +372,7 @@ footer {
     }
     .form input {
         width: 360px;
-    }/*
-    .presentacion{
-        width: 380px;
-    }*/
+    }
     section .form{
         width: 360px;
     }
