sacamos el margin a .logo_link en mobil

--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -310,6 +310,9 @@ footer {
         .logo_tipo{
             margin: 0px;
         }
+        .link_logo {
+            margin: 0px;
+        }
         nav{
             margin: 0px;
         }
