--- a/css/estilos.css
+++ b/css/estilos.css
@@ -291,6 +291,9 @@ footer img {
   header .logo_tipo {
     margin: 0px;
   }
+  header .link_logo {
+    margin: 0px;
+  }
   header nav {
     margin: 0px;
   }
