--- a/css/estilos.css
+++ b/css/estilos.css
@@ -260,6 +260,11 @@ h3 {
   width: 400px;
   height: auto;
   display: inline;
+  background-color: #4DB8FF;
+  border: none;
+}
+#btnform:hover {
+  background-color: #c6c8c9;
 }
 
 footer {
@@ -282,6 +287,7 @@ footer img {
   right: 30px;
 }
 
+/*media query para movil*/
 @media only screen and (max-width: 480px) {
   header {
     flex-direction: column;
