--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -360,11 +360,13 @@ footer {
             text-align: justify;        
         }
     .iframe{
-        width: 380px;
+        width: 90%;
+        height: auto;
+        margin: auto;
     }
     .iframe p{
-        margin: 10px;
-        width: 380px;
+        
+        width: 100%;
     }
     .contenedorGr{
         display: flex;
