--- a/css/estilos.css
+++ b/css/estilos.css
@@ -75,31 +75,15 @@ h3 {
   font-weight: 600;
 }
 
-/*font*/
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-family: "Roboto", sans-serif;
-  font-size: 1.5rem;
-  margin: 0px;
-  background-color: #E8E0E0;
-}
-
-/* galeria del index */
-.contenedorGr {
+/* padre de index */
+.padre {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  /*grid-template-rows: 300px 300px 300px;*/
-  margin: 0 10% 0 10%;
-  padding: 10px;
-  gap: 5px;
-  margin-top: 5px;
-  grid-area: "";
-}
-.contenedorGr div {
-  justify-items: center;
+  grid-template-columns: minmax(0, auto) minmax(0, auto) minmax(0, auto);
+  /*grid-template-columns: 1fr 1fr 1fr;*/
+  /*grid-auto-rows: 250px 250px 250px;*/
+  gap: 15px;
+  width: 100%;
+  grid-template-areas: "car1 car1 car2" "car3 car3 car2" "car4 car4 car4";
 }
 
 .item {
@@ -122,18 +106,22 @@ body {
   padding: 10px 10px;
 }
 
-/* padre de index */
-.padre {
+/* grids del index */
+.contenedorGr {
   display: grid;
-  grid-template-columns: minmax(0, auto) minmax(0, auto) minmax(0, auto);
-  /*grid-template-columns: 1fr 1fr 1fr;*/
-  /*grid-auto-rows: 250px 250px 250px;*/
-  gap: 15px;
-  width: 100%;
-  grid-template-areas: "car1 car1 car2" "car3 car3 car2" "car4 car4 car4";
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  /*grid-template-rows: 300px 300px 300px;*/
+  margin: 0 10% 0 10%;
+  padding: 10px;
+  gap: 5px;
+  margin-top: 5px;
+  grid-area: "";
+}
+.contenedorGr div {
+  justify-items: center;
 }
 
-/* cards de grid */
+/* cards de grid index*/
 .card_1 {
   padding: 10px;
   background-color: #007ACC;
@@ -183,6 +171,18 @@ body {
 .card_4 a {
   color: #0D0D0D;
   text-decoration: none;
+}
+
+/*font*/
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
+  margin: 0px;
+  background-color: #E8E0E0;
 }
 
 .presentacion {
