--- a/css/estilos.css
+++ b/css/estilos.css
@@ -173,18 +173,6 @@ h3 {
   text-decoration: none;
 }
 
-/*font*/
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-family: "Roboto", sans-serif;
-  font-size: 1.5rem;
-  margin: 0px;
-  background-color: #E8E0E0;
-}
-
 .presentacion {
   width: 100%;
   display: flex;
@@ -198,13 +186,6 @@ body {
 .presentacion img {
   height: 300px;
   width: auto;
-}
-
-.form input {
-  display: block;
-  width: 600px;
-  margin: 10px 0px 10px;
-  padding: 10px;
 }
 
 .perfil {
@@ -241,6 +222,7 @@ body {
   height: 300px;
 }
 
+/*iframe de carrete audiovisual*/
 .iframe {
   display: flex;
   flex-wrap: wrap;
@@ -250,24 +232,6 @@ body {
 }
 .iframe p {
   margin-top: 10px;
-}
-
-#mensaje {
-  display: block;
-  width: 600px;
-  margin: 10px 0px 10px;
-  padding: 10px;
-}
-
-#btnform {
-  width: 600px;
-  height: auto;
-  display: inline;
-  background-color: #4DB8FF;
-  border: none;
-}
-#btnform:hover {
-  background-color: #c6c8c9;
 }
 
 footer {
@@ -280,6 +244,18 @@ footer img {
   width: 30px;
   padding-left: 5px;
   padding-right: 5px;
+}
+
+/*font*/
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
+  margin: 0px;
+  background-color: #E8E0E0;
 }
 
 .btn-wp {
