--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -22,7 +22,11 @@
 @import "generales/perfil";
 @import "generales/galeria";
 @import "generales/iframe";
+@import "generales/forms";
 @import "generales/footer";
+@import "generales/btn-wp";
+@import "generales/mediaQ-mobil";
+@import "generales/mediaQ-tablet";
 
 /*font*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
@@ -37,207 +41,4 @@ body {
     font-size: 1.5rem;
     margin: 0px;
     background-color: #E8E0E0;
-}
-
-
-
-
-
-
-
-
-
-
-
-    
-
-
-
-
-
-    
-
-    
-   
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.btn-wp {
-    position: fixed;
-    width: 55px;
-    height: 55px;
-    bottom: 50px;
-    right: 30px;
-}
-/*media query para movil*/
-@media only screen and (max-width: 480px){
-    header{
-        flex-direction: column;
-        justify-content: center;
-        font-size: 1.2rem;
-        .logo_tipo{
-            margin: 0px;
-        }
-        .link_logo {
-            margin: 0px;
-        }
-        nav{
-            margin: 0px;
-        }
-    }
-   
-    .padre{
-        display: flex;
-        flex-direction: column;
-    }
-    .card_1{
-        border-radius: 0px;
-    }
-    .card_2{
-        height: 500px;
-        border-radius: 0px;
-    }
-    .cine {
-        border-radius: 0px;
-    }
-    .card_3{
-        border-radius: 0px;
-    }
-    .card_4{
-        border-radius: 0px;
-    }
-    .content{
-        margin: 10px 0px;
-        padding: 0px;
-    }
-    
-    .perfil p{
-        margin: 30px;
-        text-align: justify;
-    }
-    .perfilTexto p {       
-            margin: 10px 20px;
-            text-align: justify;        
-        }
-    .iframe{
-        width: 90%;
-        height: auto;
-        margin: auto;
-    }
-    .iframe p{
-        
-        width: 100%;
-    }
-    .contenedorGr{
-        display: flex;
-        flex-direction: column;
-    }
-    ul{
-        padding: 0px;
-    }
-    .btn-wp{
-        width: 45px;
-        height: 45px;
-        bottom: 30px;
-        right: 20px;
-    }
-    .form input {
-        width: 360px;
-    }
-    section .form{
-        width: 360px;
-    }
-    #mensaje{
-        width: 360px;
-    }
-    #btnform{
-        width: 360px;
-    }
-        
-}
-
-/*media queries para tablet*/
-
-@media only screen and (min-width: 481px) and (max-width: 950px)  {
-    header {
-        flex-direction: column;
-        justify-content: center;
-        font-size: 1.2rem;
-
-        .logo_tipo {
-            margin: 0px;
-            justify-content: center;
-        }
-        .link_logo {
-            margin: 0px;
-            justify-content: center;
-
-        }
-        nav {
-            margin: 0px;
-            justify-content: center;
-        }
-    }
-    .content {
-        margin: 0px;
-    }
-    .padre {
-        display: grid;
-        grid-template-columns: minmax(0, auto) minmax(0, auto);
-        grid-template-areas: "car1 car2" "car3 car3" "car4 car4";
-    }
-    .perfilTexto p {
-        margin: 20px;
-    }
-    .iframe {
-        width: auto;
-        justify-content: center;
-        p {
-            width: 80%;
-            text-align: justify;
-        } 
-    }
-/*galería*/
-    
-    .contenedorGr {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        margin: 0 10% 0 10%;
-        padding: 10px;
-        gap: 5px;
-        margin-top: 5px;
-        grid-area: "";
-    }
-
-/*formulario de contacto*/
-
-   .form input {
-        width: 360px;
-    }
-    section .form{
-        width: 360px;
-    }
-    #mensaje{
-        width: 360px;
-    }
-    #btnform{
-        width: 360px;
-    } 
 }
