agregamos mediaQ para tamaño 320px en form y nav

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -360,6 +360,25 @@ footer img {
     width: 360px;
   }
 }
+@media only screen and (max-width: 360px) {
+  /*nav bar*/
+  li {
+    font-size: 1rem;
+  }
+  /*formulario*/
+  .form input {
+    width: 300px;
+  }
+  section .form {
+    width: 300px;
+  }
+  #mensaje {
+    width: 300px;
+  }
+  #btnform {
+    width: 300px;
+  }
+}
 /*media queries para tablet*/
 @media only screen and (min-width: 481px) and (max-width: 950px) {
   header {
